docker, kubernetes files added. Implemented use case in question from before. Updated swagger file to latest and added exception for case of not finding the event id. README file updated.
